# treehack25

./: CMakeLists.txt  main.cpp
include/: data_updater.h  ml_algorithm.h  monte_carlo_simulation.h  output_websocket.h  signal_processing.h  stock_data_processor.h  svm_model.h  websocket_client.h
src/: data_updater.cpp  dtw.cu  ica_processor.cu  ml_algorithm.cpp  monte_carlo_simulation.cu  output_websocket.cpp  simulation_update_thread.cpp  stock_data_processor.cpp  svm_model.cpp  websocket_client.cpp
